# Tiwi-ProjectBeeld2013-2014

./: .gitignore  Beschrijving verloop + kenmerken  CMakeLists.txt  Canny.h  Cedric_De_Pauw_Labos.rar  EasyFixAll-Classification.sh  Grass.h  HOWTO  LineDetection.h  README.md  RobustSquares.h  SplitImage.h  Squares.h  Yellow.h  YellowRectangles.h  df  example.cpp  extract_frames.cpp  filters - kopie.h  filters.h  gemiddelde_hsv.pl  get_hsv.cpp  groen.csv  groen.pl  groen_kant - kopie.cpp  groen_kant.cpp  groenherkennen.cpp  hello_world.cpp  kleuren.cpp  links.csv  output squares met verschillende groottes.xlsx  predictions  splitter.h  test  test.csv  testm  train.sh  zebra.h
Cedric_De_Pauw_Labos/: Cedric_De_Pauw_Opgave1.cpp  Cedric_De_Pauw_Opgave10.cpp  Cedric_De_Pauw_Opgave11.cpp  Cedric_De_Pauw_Opgave12.cpp  Cedric_De_Pauw_Opgave13.cpp  Cedric_De_Pauw_Opgave2.cpp  Cedric_De_Pauw_Opgave3.cpp  Cedric_De_Pauw_Opgave4.cpp  Cedric_De_Pauw_Opgave5.cpp  Cedric_De_Pauw_Opgave6.cpp  Cedric_De_Pauw_Opgave7.cpp  Cedric_De_Pauw_Opgave8.cpp  Cedric_De_Pauw_Opgave9.cpp
Code/: example.cpp
Labo's/: Patrick_Van_Staey_Opgave1.cpp  Patrick_Van_Staey_Opgave10.cpp  Patrick_Van_Staey_Opgave11.cpp  Patrick_Van_Staey_Opgave12.cpp  Patrick_Van_Staey_Opgave13.cpp  Patrick_Van_Staey_Opgave2.cpp  Patrick_Van_Staey_Opgave3.cpp  Patrick_Van_Staey_Opgave4.cpp  Patrick_Van_Staey_Opgave5.cpp  Patrick_Van_Staey_Opgave6.cpp  Patrick_Van_Staey_Opgave7.cpp  Patrick_Van_Staey_Opgave8.cpp  Patrick_Van_Staey_Opgave9.cpp
SVM/: SVM_RESULTS  SVM_RESULTS.txt  SVM_RESULTS_ALL  SVM_RESULTS_ALL.txt  zones.txt  (+21 more)
(+82 files in other folders)
