cmake_minimum_required(VERSION 2.4)
	PROJECT(LABO11)
	INCLUDE_DIRECTORIES(src)
	INCLUDE_DIRECTORIES(/usr/local/include)
	LINK_DIRECTORIES(/usr/local/lib)
	LINK_DIRECTORIES(/usr/lib)
	SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
	SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
	SET(CMAKE_CXX_FLAGS "-o3 -w")
	SET(CMAKE_CXX_LINK_FLAGS "-pg")
	SET(OpenCV_LIBRARIES opencv_core opencv_highgui opencv_imgproc)
	# ADD_EXECUTABLE(example example.cpp)
	# ADD_EXECUTABLE(groen groenherkennen.cpp)
	ADD_EXECUTABLE(groen_kant groen_kant.cpp)
	ADD_EXECUTABLE(get_hsv get_hsv.cpp)
	ADD_EXECUTABLE(hsv hsv_selector.cpp)
	ADD_EXECUTABLE(test example.cpp)
	# TARGET_LINK_LIBRARIES(example ${OpenCV_LIBRARIES})
	# TARGET_LINK_LIBRARIES(groen ${OpenCV_LIBRARIES})
	TARGET_LINK_LIBRARIES(groen_kant ${OpenCV_LIBRARIES})
	TARGET_LINK_LIBRARIES(get_hsv ${OpenCV_LIBRARIES})
	TARGET_LINK_LIBRARIES(hsv ${OpenCV_LIBRARIES})
	TARGET_LINK_LIBRARIES(test ${OpenCV_LIBRARIES})
	SET(CMAKE_BUILD_TYPE Release)
